# MarlinReco

./: .clang-format  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  AUTHORS  BuildSetup.cmake  CMakeLists.txt  ChangeLog  GNUmakefile  MarlinRecoConfig.cmake.in  README.md  compile.sh  env.sh  findtaus.xml  makelib.sh
.github/workflows/: coverity.yml  key4hep.yml  linux.yml  pre-commit.yml
.travis-ci.d/: compile_and_test.sh  coverity_scan.sh
Analysis/AddClusterProperties/: AddClusterProperties.README
Analysis/AddClusterProperties/example/: AddClusterProperties.xml  CMakeLists.txt
Analysis/AddClusterProperties/include/: AddClusterProperties.h
Analysis/AddClusterProperties/src/: AddClusterProperties.cc
Analysis/BCalTagEfficiency/: README  bcal_ild00.xml  bcal_ild_05_v05.xml  bg_aver.sv01-14-p00.mILD_o1_v05.E1000-B1b_ws.PBeamstr-pairs.I210000.root  bg_aver_LDC_3.5T_14mrad_AntiDID_NominalBeamParam.root
Analysis/BCalTagEfficiency/Fortran/: check-track-to-bcal.F  track-to-bcal.F
Analysis/BCalTagEfficiency/doc/: Doxyfile
Analysis/BCalTagEfficiency/include/: BCalTagEfficiency.h  BcEnergyDensity.h
Analysis/BCalTagEfficiency/src/: BCalTagEfficiency.cc  BcEnergyDensity.cc
Analysis/CLICPfoSelector/include/: CLICDstChecker.h  CLICPfoSelector.h  CLICPfoSelectorAnalysis.h  CLICPfoSelectorTree.h  PfoUtilities.h
Analysis/CLICPfoSelector/src/: CLICDstChecker.cc  CLICPfoSelector.cc  CLICPfoSelectorAnalysis.cc  CLICPfoSelectorTree.cc  PfoUtilities.cc
Analysis/DistilledPFOCreator/: README
Analysis/ErrorFlow/: CMakeLists.txt  README
Analysis/EventShapes/: README
Analysis/EventShapes_Fortran/: README.md
Analysis/FourMomentumCovMat/: README
Analysis/GammaGammaCandidateFinder/: README
Analysis/GammaGammaHadronRemoval/: README.md
Analysis/GammaGammaSolutionFinder/: README
Analysis/IsolatedLeptonFinder/: README
Analysis/IsolatedLeptonTagging/: README
Analysis/LeptonID/: readme.md
Analysis/MarlinKinfit/: README  WW5CFit.xml
Analysis/NoPandoraBcal/: NoPandoraBcal-steering.xml
Analysis/RecoMCTruthLink/: README  RecoMCTruthLinker-steering.xml
Analysis/SLDCorrection/: README.md
Analysis/TJjetsPFOAnalysisProcessor/: README.md
Analysis/TOFAnalysis/: README.md
Analysis/TauFinder/: README  README.md
Analysis/TrackToRecoParticle/: README
Analysis/TrueJet/: CMakeLists.txt  README  README.md
Analysis/TrueJet/examples/: CMakeLists.txt  README.md  comments-on-event-865-run-82501.txt  event-865-run-82501-4f_WW_semileptonic-I250018.lis  truejet_run_ana_frdst.xml  truejet_run_ana_onthefly.xml  truejet_run_dstout.xml
Analysis/TrueJet/examples/include/: Use_TrueJet.h
Analysis/TrueJet/examples/src/: Use_TrueJet.cc
Analysis/TrueJet/include/: TrueJet.h
Analysis/TrueJet/src/: TrueJet.cc
Analysis/TrueJet_Parser/: README  README.md
Analysis/ZFinder/: Readme
BCalTagEfficiency/: README  bcal_ild00.xml
BCalTagEfficiency/include/: BcEnergyDensity.h
Clustering/hybridEcalSplitter/: readme.txt
EvaluateTauFinder/: CMakeLists.txt  EvaluateTauFinderConfig.cmake
EvaluateTauFinder/include/: EvaluateTauFinder.h
PFOID/: npdf_n.txt  pdf_charged_ge10.txt  pdf_charged_lt10.txt  pdf_n.txt  pdf_neutral_ge10.txt  pdf_neutral_lt10.txt  steer_ldc_01Sc_gauge.xml
PFOID/include/: Category.h  Configure.h  CreatePDFs.h  Histogram.h  PDF.h  PFOID.h  VObject.h
PFOID/src/: Category.cc  CreatePDFs.cc  GNUmakefile  Histogram.cc  PDF.cc  PFOID.cc  VObject.cc
PrepareRECParticles/: CMakeLists.txt  PrepareRECParticlesConfig.cmake
PrepareRECParticles/include/: PrepareRECParticles.h
PrepareRECParticles/src/: GNUmakefile  PrepareRECParticles.cc
SiStripDigi/: CMakeLists.txt  README
SiStripDigi/source/: CMakeLists.txt
SiStripDigi/source/include/: Colours.h  DigiCluster.h  PhysicalConstants.h  RombIntSolver.h  RunKutODESolver.h  SiEnergyFluct.h  SiStripClus.h  SiStripDigi.h  SiStripGeom.h  SiStripGeomBuilder.h  SiStripGeomFTD.h  Signal.h  SimTrackerDigiHit.h  StripCluster.h
SiStripDigi/source/src/: DigiCluster.cc  RombIntSolver.cc  RunKutODESolver.cc  SiEnergyFluct.cc  SiStripClus.cc  SiStripDigi.cc  SiStripGeom.cc  SiStripGeomBuilder.cc  SiStripGeomFTD.cc  Signal.cc  SimTrackerDigiHit.cc  StripCluster.cc
TauFinder/: BuildSetup.cmake  CMakeLists.txt  TauFinderConfig.cmake
TauFinder/include/: EvaluateTauFinder.h  EvaluateTauFinder2.h  EvaluateTauID.h  PrepareSmearRECParticles.h  TauFinder.h  TauID.h
TauFinder/src/: EvaluateTauFinder.cc  EvaluateTauFinder2.cc  EvaluateTauID.cc  PrepareRECParticles.cc  PrepareSmearRECParticles.cc  TauFinder.cc  TauID.cc
TimeOfFlight/: README.md
TimeOfFlight/example/: tofplots_steer.xml
TimeOfFlight/include/: TOFEstimators.h  TOFPlots.h  TOFUtils.h
TimeOfFlight/scripts/: draw_cluster_time.C  draw_tofestimators.C  lcio_particle_gun.py  make_root_plots.sh  run_all_and_make_root_plots_random.sh  run_all_marlin.sh  run_all_marlin_10GeV.sh  run_all_marlin_2GeV.sh  run_all_marlin_5GeV.sh  run_all_marlin_v1.sh  run_all_marlin_v2.sh  tofestimators.xml
TimeOfFlight/src/: TOFEstimators.cc  TOFPlots.cc  TOFUtils.cc
TimeOfFlight/xml/: steer.xml
Tracking/TrackLength/: README.md
cmake/: MarlinRecoConfig.cmake.in  MarlinRecoConfigVersion.cmake.in  clang-cpp-checks.cmake
doc/: CMakeLists.txt  Doxyfile  ReleaseNotes.md  overview.html  release.notes
doc/TauFinder/: findtaus.xml
doc/manual/: defs.tex  makedoc.sh  manual.tex  manual_document.tex  marlin.eps
doc/manual/examples/: exampleSteeringFileASCII.txt  exampleSteeringFileXML.txt
examples/: README  exampleVTX.xml  example_VTX_FTD.xml  gear_ldc00_tracking.xml  gear_ldc01.xml  gear_ldc01_tracking.xml  steer_TrackBasedPFlow.xml  steer_ldctracking.xml  steer_trackcheater.xml
examples/LDC/: GNUmakefile_desy  README  gear_ldc.xml  muons.slcio  steer_ldc.xml
examples_LDC/: GNUmakefile_desy
src/: CMakeLists.txt  GNUmakefile
trunk/: MarlinRecoConfig.cmake.in  env.sh
trunk/PFOID/: npdf_n.txt  pdf_charged_lt10.txt  steer_ldc_01Sc_gauge.xml
trunk/examples/: README  gear_ldc00_tracking.xml  steer_trackcheater.xml  top_6j_500GeV_silicon.slcio
(+1056 files in other folders)
